# hisbox

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.MIT  README.md
adif-reader/: Cargo.toml
adif-reader/fixtures/: basic-header.adi  example.adx
adif-reader/src/: adi.rs  document.rs  error.rs  format.rs  lib.rs
adif-reader/src/adi/: data.rs  error.rs  field.rs  header.rs  record.rs  tag.rs
adif-reader/src/document/: document.rs  field_name.rs  record.rs
adif-reader/src/format/: adi.rs  adx.rs
adif-reader/src/format/adi/: data.rs  error.rs  header.rs  record.rs  tag.rs
adif-reader/src/format/adx/: error.rs  field_name.rs  header.rs  record.rs
adif2json/: Cargo.toml
adif2json/src/: main.rs
assets/contest/: example.lua
assets/qsl-card/: generate-pdf.bash  generate-pdf.ps1  qslcard-report.typ  qslcard-single.lua
assets/qsl-card/types/: data.d.lua  datetime.d.lua  global.d.lua
assets/qsl-card/types/datetime/: module.d.lua  type.d.lua
assets/qsl-card/types/global/: Exchange.d.lua  QslCard.d.lua  QslCardEntry.d.lua  QslInfo.d.lua  QslInstrument.d.lua  QslOperation.d.lua  Record.d.lua
callfind/: Cargo.toml  build.rs  prefixes.tsv
callfind/examples/: calc_grid.rs  find_area.rs
callfind/src/: callsign.rs  grid_locator.rs  lib.rs  prefix.rs
callfind/src/callsign/: data.rs  prefix.rs
callfind/src/grid_locator/: error.rs  inner.rs
common-qso/: Cargo.toml
common-qso/src/: band.rs  contest.rs  error.rs  lib.rs  qsl.rs  record.rs
contests/: all-saitama.lua  example.lua  example.rhai
jelgen/: Cargo.toml
jelgen/src/: calculator.rs  cli.rs  main.rs  processor.rs  qso.rs  scop.rs
jelgen/src/calculator/: config.rs  data.rs  error.rs  lualib.rs
jelgen/src/calculator/lualib/: jarl.rs
jelgen/src/processor/: config.rs  data.rs  error.rs  lualib.rs
jelgen/src/processor/lualib/: jarl.rs
jelgen/src/qso/: band.rs  error.rs  record.rs
jelgen/src/scop/: datetime.rs  error.rs  library.rs
opus-bridge/: Cargo.toml
opus-bridge/src/: main.rs
qcgen/: Cargo.toml
qcgen/src/: cli.rs  data.rs  main.rs
qsl-print/: qslcard-report.typ  qslcard-single.lua
schope/: Cargo.toml
schope/src/: data.rs  engine.rs  error.rs  lib.rs  library.rs
schope/src/data/: contest.rs  exchange.rs  misc.rs  qsl_card.rs  record.rs
schope/src/engine/: serde.rs  tableop.rs
