[workspace]
resolver = "3"
members = [
  "jelgen",
  "adif-reader",
  "callfind",
  "qcgen",
  "schope",
  "common-qso",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Yū KOBAYASHI <kb10uy@kb10uy.org>"]

[workspace.dependencies]
adif-reader = { path = "./adif-reader" }
callfind = { path = "./callfind" }
common-qso = { path = "./common-qso" }
schope = { path = "./schope" }

anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
compact_str = "0.9.0"
itertools = "0.14.0"
mlua = { version = "0.11.5", features = ["vendored", "lua54", "serde", "send"] }
num = "0.4.3"
regex = "1.12.2"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
thiserror = "2.0.18"
time = { version = "0.3.45", features = [
  "local-offset",
  "formatting",
  "parsing",
  "macros",
] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-segmentation = "1.12.0"

[profile.release]
lto = true
strip = true
