[package]
name = "callfind"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
quote = "1.0.44"
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[build-dependencies]
itertools = { workspace = true }
