[package]
name = "jelgen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
adif-reader = { workspace = true }
clap = { workspace = true }
mlua = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
