[package]
name = "qcgen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
adif-reader = { workspace = true }
anyhow = { workspace = true }
callfind = { workspace = true }
clap = { workspace = true }
common-qso = { workspace = true }
compact_str = { workspace = true }
regex = { workspace = true }
schope = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
