[package]
name = "schope"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
callfind = { workspace = true }
compact_str = { workspace = true }
mlua = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
